syntax = "proto3";
package idp2p.pb;

message PubsubMessage {
    oneof pubsub_message{
        bool resolve = 1;
        bytes publish = 2; // bytes of microledger
        bytes envelope = 3; // [codec][bytes of oneshotmessage]
    }
}

message PairsubMessage {
    string topic = 1;
    PubsubMessage message = 2; 
}

message PairsubRequest {
    string access_token = 1;
    oneof pairsub_request_kind {
        bool get = 2;
        SubscribeMessage subscribe = 3;
        PairsubMessage publish = 4;
    }
    message SubscribeMessage{
        repeated string topics = 1;
    }
}

message PairsubResponse {
    oneof response_status{
        bool ok = 1;
        GetOk get_ok = 2;
        PairsubResponseError error = 3;
    } 
    message PairsubResponseError {
        string id = 1;
        string code = 2;
        string message = 3; 
    }
    message GetOk{
         repeated PairsubMessage messages = 1;
    }
}

